# pizero

./: README.md  test.cpp
blink/: CMakeLists.txt
blink/src/: CMakeLists.txt  blink.c  heap.c  stack.c
edu_stdin/: CMakeLists.txt
edu_stdin/lib/: CMakeLists.txt  greetings.cpp
edu_stdin/src/: CMakeLists.txt  main.c  main.cpp
edu_stdin2/: CMakeLists.txt
edu_stdin2/src/: CMakeLists.txt  main2.cpp  main3.cpp
edu_stdin3/: CMakeLists.txt
edu_stdin3/lib/: greetings.cpp  greetings.h
edu_stdin3/src/: CMakeLists.txt  main.cpp
edu_stdin4/: CMakeLists.txt
edu_stdin4/src/: CMakeLists.txt  main.cpp  main1.cpp
hello/: CMakeLists.txt
hello2/: CMakeLists.txt
hello2/src/: CMakeLists.txt
hello3/src/: main.cpp  stack.c
hello4/: CMakeLists.txt
hello4/src/: heap.c
logic/: 6ty  main  main.cpp
